updating font awesome url

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
-@import url('/font-awesome-4.7.0/css/font-awesome.min.css');
+@import url('/mmk/font-awesome-4.7.0/css/font-awesome.min.css');
 
 body {
 margin:0px;
